[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Animations/BlobEnemy.tres" type="SpriteFrames" id=2]

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 1 )

[node name="EnemySprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "Standing"
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -9.93695, -6.51042 )
polygon = PoolVector2Array( 2.87371, 22.4894, 14.9754, 22.4894, 17.2805, 19.464, 17.5686, 15.286, 13.9669, 5.63343, 10.0771, 5.63343, 6.61948, 5.63343, 1.86523, 14.8538 )

[node name="DecisionTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="MovementTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DecisionTimer" to="." method="_on_DecisionTimer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
